add more comments and COPYING notices

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+/* ************************************************** */
+/* Example CSS style sheet for the default page       */
+/* Author: Alexander Voigt                            */
+/* ************************************************** */
 
 html, body { background-color:#DDDDDD; }
 
